Bug 1638655 - When hit testing in layout coordinates, transform the composition bounds clip to layout coordinates. r=tnikkel

Previously, we were only performing part of this transform
(scaling by the resolution) and not the other part
(translating by the offset between the two viewports).

Differential Revision: https://phabricator.services.mozilla.com/D75739